log
Fri May  8 09:56:54 PM UTC 2026: 
 tests:  0|6
========================================
b0b99a7
Fri May  8 10:07:21 PM UTC 2026: 
 tests:  0|6
========================================
36e8bf5
Thu May 14 08:17:21 PM UTC 2026: 
 graph.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
========================================
bb7c913
Thu May 14 08:18:43 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c816057
Thu May 14 08:21:03 PM UTC 2026: 
 graph.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:33:10: error: ‘Graph’ has no member named ‘map_create’
   33 |     Grafo->map_create(is_equal_string);
      |          ^~
4f6930b
Thu May 14 08:21:19 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:33:24: error: invalid use of incomplete typedef ‘Map’
   33 |     Grafo->adjacencyMap->map_create(is_equal_string);
      |                        ^~
1f84174
Thu May 14 08:22:09 PM UTC 2026: 
 graph.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:
graph.c: In function ‘createGraph’:
graph.c:33:24: error: invalid use of incomplete typedef ‘Map’
   33 |     Grafo->adjacencyMap->map_create(is_equal_string);
      |                        ^~
eb3facd
Thu May 14 08:22:39 PM UTC 2026: 
 graph.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0a0f18c
